<resources>
    <string name="app_name">BehindU</string>
    <string name="EnterYourMail">Enter your mail</string>
    <string name="EnterYourPassword">Enter your password</string>
    <string name="click_here_btn">Click here</string>
    <string name="new_member">New member?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="EnterYourFirstName">Enter your first name</string>
    <string name="EnterYourLastName">Enter your last name</string>
    <string name="CreateANewUser">Create a new user</string>
    <string name="EnterAPhoneNumber">Enter a phone number</string>
    <string name="RepeatThePassword">Repeat the password</string>
    <string name="Finish">finish</string>
    <string name="ResetPassword">Reset password</string>
    <string name="Following">Following</string>
    <string name="Followed">Followed</string>
    <string name="register">Registrer</string>
    <string name="selecting_status">Selecting status</string>
    <string name="view_real_time_location">View real-time location</string>
    <string name="view_location_history">View location history</string>
    <string name="select_an_action">Select an action</string>
    <string name="sendAFollowerMessage">Send a follower message</string>
    <string name="callTheFollower">Call the follower</string>
    <string name="sos">S.O.S</string>
    <string name="sign_out">Sign out</string>
    <string name="collection_user_location" translatable="false">User Locations</string>
    <string name="collection_users" translatable="false">Users</string>
    <string name="google_map_api_key" translatable="false">AIzaSyCuFvotxjgZh6NJSueQOmDgMe9IvF0hm4A</string>
    <string name="arrive_message_child">Arrive</string>
    <string name="message_sent">The message sent</string>
    <string name="real_time_lcoation">Realtime location</string>
    <string name="last_locations">Last locations</string>
    <string name="child_details">Child details</string>
    <string name="generate_code">Generate</string>
    <string name="instructions_add_child_1">1. Click on \'Generate\'.</string>
    <string name="instructions_add_child_2">2. Type the code on child phone.</string>
    <string name="apply_code_child">Apply</string>
    <string name="enter_code">Enter code</string>
    <string name="not_connected">Not connected to follower</string>
    <string name="connected_to_follower">Connected to follower</string>
    <string name="statues_connection">Statues:</string>
    <string name="last_location_of_child">The last location of your child</string>
    <string name="determine_root">Determine route to</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="duration">Duration:</string>
    <string name="distance">Distance:</string>
    <string name="trip">Trip #</string>
    <string name="open_google_map">OpenGoogle Maps?</string>
    <string name="you_are_connected_to_follower">You are connected to the follower</string>
    <string name="enter_password_error"> Password is less than 6 characters or incorrect</string>
    <string name="password_instructions">Password should contain at list 6 characters</string>
    <string name="email_login_error">Please enter a valid email</string>
    <string name="email_login_instructions">Email should contain \'@\' on the address</string>
    <string name="code_error_child">The code should contatin 6 chararcters</string>
    <string name="code_error_invalid">The code is invalid</string>
    <string name="connection_succeed">Connection to follower succeed</string>
    <string name="connection_failed">Connection to follower failed</string>
    <string name="connection_failed_instructions">Try to re-enter the code or talk with your follower</string>
    <string name="loading_progressbar">Loading...</string>
    <string name="google_map_instructions">The route will open in google maps app</string>
    <string name="first_name_error">Enter first name</string>
    <string name="last_name_error">Enter last name</string>
    <string name="phone_number_error">PLease enter phone number of the follower</string>
    <string name="registration_succeed">Registration successfulled</string>
    <string name="ok_confirmation">ok</string>
    <string name="your_child">Your Child:</string>
    <string name="location_child_view">Location:</string>
    <string name="name_child_view">Name:</string>
    <string name="route_creation_info">You will see the route(s) on map.</string>
    <string name="battery">Battery:</string>
    <string name="home_menu">Home</string>
    <string name="settings_menu">Settings</string>
    <string name="actions_menu">Actions</string>
    <string name="child_status">Status:</string>
    <string name="connected">Connected to app</string>
    <string name="disconnect">Disconnected from app</string>
    <string name="child_is_not_connected_title">The child is not connected to app</string>
    <string name="child_is_not_connected_info">The child need to login the app</string>
    <string name="GPS_off_title">The GPS is off</string>
    <string name="GPS_off_info">You should enable the GPS to use the app</string>
    <string name="settings_answer">Move to settings</string>
    <string name="gps_status">GPS status:</string>
    <string name="connected_gps">ON</string>
    <string name="disconnect_gps">OFF</string>
    <string name="Enter_follower_phone_number">Enter a follower phone number</string>
    <string name="unknown_location">Unknown</string>
    <string name="launch_notification">Launch</string>
    <string name="remove_notification">Remove</string>
    <string name="location_updated_title_notification">Location Updated</string>
    <string name="dangerous_zone_search">city,street. for example: California , west coast</string>
    <string name="dangerous_zone_title">Dangerous Zones</string>
    <string name="dangerous_zone_info">Do you want to add this area to \"Dangerous zones\"?</string>
    <string name="dangerous_zone_notification_title">Dangerous zone arrived</string>
    <string name="dangerous_zone_message">Your child is closed to</string>
    <string name="dangerous_zone_meters">and the distance is:</string>
    <string name="meters_notification">meters</string>
    <string name="dangerous_zone_notifications">Dangerous Zone Notifications</string>
    <string name="dangerous_zone_added">The zone added sucessefully</string>
    <string name="unknown_location_title">Uknown location</string>
    <string name="registraion_failed_title">Register failed</string>
    <string name="register_failed_info">The user name is already exists</string>
    <string name="dangerous_zone_ontap_title">Dangerous Zone</string>
</resources>
