<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registration_activity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12"
        android:background="@drawable/register_top"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="35dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/firstNameInput_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/black"
            android:hint="@string/EnterYourFirstName"
            android:textStyle="bold"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/lastNameInput_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/black"
            android:hint="@string/EnterYourLastName"
            android:textStyle="bold"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/emailInput_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/black"
            android:hint="@string/EnterYourMail"
            android:textStyle="bold"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/phoneNumberInput_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/black"
            android:hint="@string/EnterAPhoneNumber"
            android:textStyle="bold"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/passwordInput_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/black"
            android:hint="@string/EnterYourPassword"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/rptPasswordInput_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/black"
            android:hint="@string/RepeatThePassword"
            android:textStyle="bold"
            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Following"
                android:layout_marginStart="60dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Followed"/>
        </LinearLayout>

        <Button
            android:id="@+id/createUserBtn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back_ground"
            android:text="@string/CreateANewUser"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

    </LinearLayout>
</LinearLayout>