<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:background="@drawable/register_top"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
            android:layout_margin="15dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/black"
            android:hint="@string/EnterYourMail"
            android:textStyle="bold"
            android:textAlignment="center"
            android:id="@+id/emailInput_login"

        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="15dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/black"
            android:hint="@string/EnterYourPassword"
            android:textStyle="bold"
            android:textAlignment="center"
            android:id="@+id/passwordInput_login"
            />

        <Button
            android:id="@+id/forgot_pass_btn"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/login_progressbar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_ground"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/new_member" />


        <Button
            android:id="@+id/new_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/click_here_btn"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            />
    </LinearLayout>
</LinearLayout>