<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:background="@drawable/register_top"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="10"
        android:gravity="top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ResetPassword"
            android:layout_margin="50dp"
            android:textSize="40dp"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/mail_reset_passwordEt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/black"
            android:hint="@string/EnterYourMail"
            android:textStyle="bold"
            android:textAlignment="center"

            />


    <Button
        android:id="@+id/finish_reset_passBtn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/back_ground"
        android:text="@string/Finish"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_margin="50dp"
        />

    </LinearLayout>
</LinearLayout>