<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:background="@drawable/register_top"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_an_action"
            android:layout_margin="40dp"
            android:textSize="35dp"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/view_real_time_locationBtn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_ground"
            android:text="@string/view_real_time_location"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_margin="50dp"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/view_location_historyBtn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_ground"
            android:text="@string/view_location_history"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_margin="50dp"
            android:textSize="20dp"
            />

    </LinearLayout>



</LinearLayout>