<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/register_top"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/sos"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_ground"
            android:text="@string/sos"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            android:layout_margin="50dp"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/send_Follower_MessageBtn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_ground"
            android:text="@string/sendAFollowerMessage"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_margin="50dp"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/call_The_FollowerBtn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_ground"
            android:text="@string/callTheFollower"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_margin="50dp"
            android:textSize="20dp"
            />

    </LinearLayout>
</LinearLayout>